# unnamed_lua_binder

./: .gitignore  CMakeLists.txt  Character.cpp  Character_test.lua  LuaScript.cpp  LuaScript.h  build-mingw.bat  main.cpp  mood.lua  test.lua
src/: Character.cpp  LuaScript.cpp  LuaScript.h  luabridge.cpp  luabridge_character.cpp  luabridge_character.h  main.cpp
src/ecs/: Component.h  Entity.cpp  Entity.h  GraphicsComponent.cpp  GraphicsComponent.h  LuaHelperFunctions.cpp  LuaHelperFunctions.h  NpcComponent.cpp  NpcComponent.h  ecs_test.cpp
src/lua/: ecs-test.lua  ecslib.lua  guard.lua  lovetoys.lua  lovetoys_test.lua  lua_test.lua  luabridge_test.lua  middleclass_test.lua  middleclass_test_class.lua  mood.lua  tiny-ecs-test.lua  tiny-ecs.lua  witch.lua
src/lua/ecs-test/: witch.lua
src/lua/ecslib/: ecs.lua  init.lua
src/lua/ecslib/core/: component.lua  entity.lua
src/lua/ecslib/ecs-core/: system.lua  world.lua
src/lua/lovetoys/: init.lua
src/lua/tiny-ecs/: init.lua
